<resources>
    <string name="app_name">Agen Pet</string>
    <string name="app_email">agenpet@gmail.com</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueci_senha">Esqueci minha Senha</string>
    <string name="realizar_cadastro">Realizar Cadastro</string>
    <string name="logar">Logar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="cadastro">Cadastro</string>
    <string name="login">Login</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="complemento">Complemento</string>
    <string name="home">Home</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="pets">Pets</string>
    <string name="configuracao">Configuração</string>
    <string name="cadastrar_novo_agendamento">Cadastrar Novo Agendamento</string>
    <string name="cadastrar_novo_pet">Cadastrar Novo Pet</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="title_login">Login</string>
    <string name="cd_logo_app">Logo do Aplicativo</string>
    <string name="label_acesso_conta">Acesse sua conta</string>
    <string name="title_cadastro_usuario">Cadastro de Usuário</string>
    <string name="label_dados_pessoais">Dados Pessoais</string>
    <string name="hint_nome_completo">Nome Completo</string>
    <string name="hint_data_nascimento_formato">Data de Nascimento (DD/MM/AAAA)</string>
    <string name="label_endereco">Endereço</string>
    <string name="label_seguranca">Segurança</string>
    <string name="hint_senha_min_chars">Senha (mín. 8 caracteres)</string>
    <string name="label_identificacao_pet">Identificação do Pet</string>
    <string name="label_especie">Espécie</string>
    <string name="label_raca">Raça</string>
    <string name="label_caracteristicas_fisicas">Características Físicas</string>
    <string name="label_sexo">Sexo</string>
    <string name="option_macho">Macho</string>
    <string name="option_femea">Fêmea</string>
    <string name="option_desconhecido">Não sei</string>
    <string name="label_info_adicional_animal">Informações (não editáveis após cadastro)</string>
    <string name="hint_peso_kg">Peso (kg)</string>
    <string name="hint_altura_cm">Altura (cm)</string>
    <string name="label_castrado">Castrado?</string>
    <string name="option_sim">Sim</string>
    <string name="option_nao">Não</string>
    <string name="hint_descricao_observacoes">Observações</string>
    <string name="cd_icone_descricao">Ícone de descrição</string>
    <string name="button_salvar">Salvar</string>
    <string name="placeholder_id_animal">ID: %1$d</string>
    <string name="titulo_editar_animal">Editar Pet</string>
    <string name="titulo_editar_agendamento">Editar Agendamento</string>
    <string name="titulo_novo_animal">Novo Pet</string>
    <string name="button_atualizar">Atualizar</string>
    <string name="cd_carregando_racas">Carregando raças</string>
    <string name="toast_animal_salvo_sucesso">Pet salvo com sucesso!</string>
    <string name="toast_preencher_campos_obrigatorios">Por favor, preencha todos os campos obrigatórios.</string>
    <string name="toast_erro_usuario_nao_encontrado">Erro: usuário não encontrado. Tente novamente.</string>
    <string name="toast_informar_castrado">Informe se o pet é castrado</string>
    <string name="titulo_datepicker_data_nascimento">Selecione a data de nascimento</string>
    <string name="titulo_proximo_agendamento">Próximo agendamento</string>
    <string name="titulo_recentes">Recentes</string>
    <string name="label_animal">Animal:</string>
    <string name="label_veterinario">Veterinário:</string>
    <string name="label_data">Data:</string>
    <string name="label_horario">Horário:</string>
    <string name="cd_icone_pet">Ícone do pet</string>
    <string name="label_pet_item">Pet:</string>
    <string name="label_servico">Serviço:</string>
    <string name="label_hora_item">Hora:</string>
    <string name="label_status">Status:</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="sair">Sair</string>
    <string name="cd_ver_detalhes">Ver Detalhes</string>
    <string name="cd_imagem_perfil">Imagem do perfil</string>
    <string name="cd_acessar_perfil">Acessar perfil do usuário</string>
    <string name="placeholder_nome_usuario">Nome do Utilizador</string>
    <string name="placeholder_email_usuario">email.do.utilizador@email.com</string>
    <string name="title_perfil">Perfil</string>
    <string name="cd_remover_animal">Remover animal</string>
    <string name="toast_animal_removido_sucesso">Animal removido com sucesso!</string>
    <string name="dialog_title_remover_animal">Remover Animal</string>
    <string name="dialog_message_remover_animal">Tem a certeza de que deseja remover %1$s? Esta ação não pode ser desfeita.</string>
    <string name="dialog_button_remover">Remover</string>
    <string name="dialog_button_cancelar">Cancelar</string>
    <string name="title_meu_perfil">Meu Perfil</string>
    <string name="button_salvar_alteracoes">Salvar Alterações</string>
    <string name="toast_perfil_atualizado_sucesso">Perfil atualizado com sucesso!</string>
    <string name="cd_propaganda">Propaganda</string>
    <string name="label_aparencia">Aparência</string>
    <string name="label_modo_escuro">Tema</string>
    <string name="desc_icon_dark_mode">Ícone do tema escuro</string>
    <string name="theme_light">Claro</string>
    <string name="theme_dark">Escuro</string>
    <string name="theme_system">Padrão do Sistema</string>
    <string name="label_idioma">Idioma</string>
    <string name="label_idioma_titulo">Selecionar Idioma</string>
    <string name="desc_icon_idioma">Ícone de idioma</string>
    <string name="lang_portuguese">Português</string>
    <string name="lang_english">Inglês</string>
    <string name="lang_spanish">Espanhol</string>
    <string name="lang_french">Francês</string>
    <string name="lang_italian">Italiano</string>
    <string name="lang_german">Alemão</string>
    <string name="lang_japanese">Japonês</string>
    <string name="lang_chinese">Chinês</string>
    <string name="label_notificacoes">Notificações</string>
    <string name="label_receber_notificacoes">Receber notificações</string>
    <string name="desc_icon_notificacoes">Ícone de notificações</string>
    <string name="label_inicio">Inicio</string>
    <string name="label_cadastro_pet">Cadastro de Pet</string>
    <string name="label_meus_agendamentos">Meus Agendamentos</string>
    <string name="label_meus_pets">Meus Pets</string>
    <string name="label_dados_agendamento">Dados do Agendamento</string>
    <string name="hint_tipo_agendamento">Tipo de Agendamento</string>
    <string name="hint_selecione_pet">Selecione o Pet</string>
    <string name="hint_selecione_veterinario">Selecione o Veterinário</string>
    <string name="label_data_e_hora">Data e Hora</string>
    <string name="hint_data">Data</string>
    <string name="hint_horario">Horário</string>
    <string name="cd_icone_observacoes">Ícone de Observações</string>
    <string name="hint_descricao_agendamento_opcional">Descrição / Observações (Opcional)</string>
    <string name="buscar_pets">Buscar por nome ou raça...</string>
    <string name="buscar_agendamentos">Buscar por pet, veterinário...</string>
    <string name="status_aberto">Aberto</string>
    <string name="status_cancelado">Cancelado</string>
    <string name="status_concluido">Concluído</string>
    <string name="status_perdido">Perdido</string>
    <string name="status_desconhecido">Status Desconhecido</string>
    <string name="tipo_consulta">Consulta</string>
    <string name="tipo_cirurgia">Cirurgia</string>
    <string name="tipo_vacina">Vacina</string>
    <string name="tipo_outro">Outro</string>
    <string name="especie_cachorro">Cachorro</string>
    <string name="especie_gato">Gato</string>
    <string name="especie_ave">Ave</string>
    <string name="especie_coelho">Coelho</string>
    <string name="especie_tartaruga">Tartaruga</string>
    <string name="especie_peixe">Peixe</string>
    <string name="especie_cavalo">Cavalo</string>
    <string name="especie_porquinho_da_india">Porquinho-da-índia</string>
    <string name="especie_reptil">Réptil</string>
    <string name="especie_rato">Rato</string>
    <string name="especie_furao">Furão</string>
    <string name="especie_hamster">Hamster</string>
    <string name="especie_outros">Outros</string>
    <string name="raca_desconhecido">Desconhecido</string>
    <string name="raca_vira_lata">Vira Lata</string>
    <string name="raca_pastor_alemao">Pastor Alemão</string>
    <string name="raca_poodle">Poodle</string>
    <string name="raca_labrador_retriever">Labrador Retriever</string>
    <string name="raca_bulldog_frances">Bulldog Francês</string>
    <string name="raca_golden_retriever">Golden Retriever</string>
    <string name="raca_chihuahua">Chihuahua</string>
    <string name="raca_beagle">Beagle</string>
    <string name="raca_shih_tzu">Shih Tzu</string>
    <string name="raca_dachshund">Dachshund</string>
    <string name="raca_boxer">Boxer</string>
    <string name="raca_rottweiler">Rottweiler</string>
    <string name="raca_siames">Siamês</string>
    <string name="raca_persa">Persa</string>
    <string name="raca_maine_coon">Maine Coon</string>
    <string name="raca_angora">Angorá</string>
    <string name="raca_sphynx">Sphynx</string>
    <string name="raca_british_shorthair">British Shorthair</string>
    <string name="raca_bengal">Bengal</string>
    <string name="raca_ragdoll">Ragdoll</string>
    <string name="raca_periquito">Periquito</string>
    <string name="raca_calopsita">Calopsita</string>
    <string name="raca_papagaio">Papagaio</string>
    <string name="raca_canario">Canário</string>
    <string name="raca_arara">Arara</string>
    <string name="raca_mini_lop">Mini Lop</string>
    <string name="raca_lionhead">Lionhead</string>
    <string name="raca_rex">Rex</string>
    <string name="raca_angora_ingles">Angorá Inglês</string>
    <string name="raca_betta">Betta</string>
    <string name="raca_goldfish">Goldfish</string>
    <string name="raca_tetra_neon">Tetra Neon</string>
    <string name="raca_mangalarga_marchador">Mangalarga Marchador</string>
    <string name="raca_puro_sangue_arabe">Puro Sangue Árabe</string>
    <string name="raca_hamster_sirio">Hamster Sírio</string>
    <string name="button_alterar_senha">Alterar Senha</string>
    <string name="hint_senha_antiga">Senha Antiga</string>
    <string name="hint_nova_senha">Nova Senha</string>
    <string name="hint_confirmar_nova_senha">Confirmar Nova Senha</string>
    <string name="button_salvar_nova_senha">Salvar Nova Senha</string>
    <string name="titulo_funcionarios">Funcionários</string>
    <string name="meus_horarios">Meus Horários</string>
    <string name="sobre_nos">Sobre Nós</string>
    <string name="sobre_descricao_app">O AgenPet facilita o agendamento de consultas veterinárias, conectando tutores e clínicas de forma rápida e segura.</string>
    <string name="sobre_github">Visitar GitHub</string>
    <string name="sobre_contato">Entre em Contato</string>
    <string name="sobre_copyright">© 2025 AgenPet. Todos os direitos reservados.</string>
    <string name="sobre_desenvolvedores">Desenvolvedores</string>
    <string name="titulo_pos_consulta">Detalhes do Atendimento</string>
</resources>