<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/homeProfissionalFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/funcionarioFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/titulo_funcionarios" />
    </group>

    <group android:id="@+id/group_settings" android:checkableBehavior="none">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/configuracao" />
    </group>
    <group android:id="@+id/group_sobre" android:checkableBehavior="none">

        <item
            android:id="@+id/sobreNosFragment"
            android:icon="@drawable/ic_info"
            android:title="@string/sobre_nos" />

    </group>
</menu>