<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="br.com.caiorodri.agenpet.ui.home.ClienteHomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_cliente">

        <action
            android:id="@+id/action_homeFragment_to_agendamentoCadastroFragment"
            app:destination="@id/agendamentoCadastroFragment" />

    </fragment>

    <fragment
        android:id="@+id/agendamentoFragment"
        android:name="br.com.caiorodri.agenpet.ui.agendamento.AgendamentoFragment"
        android:label="@string/label_meus_agendamentos"
        tools:layout="@layout/fragment_agendamento">

        <action
            android:id="@+id/action_agendamentoFragment_to_agendamentoCadastroFragment"
            app:destination="@id/agendamentoCadastroFragment" />
    </fragment>

    <fragment
        android:id="@+id/animalFragment"
        android:name="br.com.caiorodri.agenpet.ui.animal.AnimalFragment"
        android:label="@string/label_meus_pets"
        tools:layout="@layout/fragment_animal" >
        <action
            android:id="@+id/action_animalFragment_to_cadastroAnimalFragment"
            app:destination="@id/cadastroAnimalFragment" />
    </fragment>

    <fragment
        android:id="@+id/meuPerfilFragment"
        android:name="br.com.caiorodri.agenpet.ui.usuario.MeuPerfilFragment"
        android:label="@string/title_meu_perfil"
        tools:layout="@layout/fragment_meu_perfil" />

    <action
        android:id="@+id/action_global_meuPerfilFragment"
        app:destination="@id/meuPerfilFragment" />

    <fragment
        android:id="@+id/cadastroAnimalFragment"
        android:name="br.com.caiorodri.agenpet.ui.animal.AnimalCadastroFragment"
        android:label="@string/label_cadastro_pet"
        tools:layout="@layout/fragment_animal_cadastro" >
        <argument
            android:name="animal"
            app:argType="br.com.caiorodri.agenpet.model.animal.Animal"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/agendamentoCadastroFragment"
        android:name="br.com.caiorodri.agenpet.ui.agendamento.AgendamentoCadastroFragment"
        android:label="Agendamento"
        tools:layout="@layout/fragment_agendamento_cadastro">

        <argument
            android:name="agendamento"
            app:argType="br.com.caiorodri.agenpet.model.agendamento.Agendamento"
            app:nullable="true"
            android:defaultValue="@null" />

        <action
            android:id="@+id/action_agendamentoCadastroFragment_to_posConsultaFragment"
            app:destination="@id/posConsultaFragment"/>


    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="br.com.caiorodri.agenpet.ui.settings.SettingsFragment"
        android:label="@string/configuracao"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/sobreNosFragment"
        android:name="br.com.caiorodri.agenpet.ui.sobre.SobreNosFragment"
        android:label="@string/sobre_nos"
        tools:layout="@layout/fragment_sobre_nos" >

        <action
            android:id="@+id/action_sobreFragment_to_desenvolvedorFragment"
            app:destination="@id/desenvolvedorFragment" />

    </fragment>

    <fragment
        android:id="@+id/posConsultaFragment"
        android:name="br.com.caiorodri.agenpet.ui.agendamento.PosConsultaFragment"
        android:label="@string/titulo_pos_consulta"
        tools:layout="@layout/fragment_pos_consulta">

        <argument
            android:name="agendamento"
            app:nullable="false"
            app:argType="br.com.caiorodri.agenpet.model.agendamento.Agendamento" />

    </fragment>

    <fragment
        android:id="@+id/desenvolvedorFragment"
        android:name="br.com.caiorodri.agenpet.ui.sobre.DesenvolvedorFragment"
        android:label="@string/sobre_desenvolvedores"
        tools:layout="@layout/fragment_desenvolvedor" />


</navigation>